chapter toc li spacing bug fix

--- a/css/ccap-biology.less
+++ b/css/ccap-biology.less
@@ -205,13 +205,13 @@ div.exercise > div.title{ display:none; }  //hide exercise title overrides docbo
   .toc-section {
   margin:.5em;	
   padding:0em 1em;
-  text-indent: -2.75em; //this is to give the illusion that the second line of a section title is indented
+  text-indent: -3.25em; //this is to give the illusion that the second line of a section title is indented
     
     > a.target-section {
     color:black;
      
     .cnx-gentext-n {
-    padding: .15em;     
+    padding: .5em;     
     
     &:after { content: ":";}/*add : to key concepts BIO Review Issue #9*/
       
